# spannery

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  Makefile  README.md  Spannery-Model-CRUD-Guide.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: deploy-live.yml  deploy-livetest.yml  deploy-production.yml  deploy-staging.yml  deploy-test.yml  pr-check.yml  publish-package.yml  run-unit-tests.yml
examples/: README.md  join_example.py  simple_crud.py  simple_example.py  table_filter_example.py  transaction_example.py
scripts/: update_pyproject.py
src/: pyproject.toml
src/spannery/: __init__.py  fields.py  model.py  query.py  session.py  utils.py
tests/: conftest.py  test_fields.py  test_join.py  test_model.py  test_query.py  test_session.py  test_transactions.py
